* The advanced PM search wasn't properly aligned (PersonalMessage template, index.css) [Bug 3685]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8910 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -2886,6 +2886,14 @@ dl.stats dd
 {
 	background: #F10909;
 }
+.pm_search
+{
+	overflow: hidden;
+}
+#personal_messages fieldset.search_options
+{
+	width: 45%;
+}
 
 /* Styles for the calendar section.
 ------------------------------------------------- */
